--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "next build && touch docs/.nojekyll",
     "clean": "rimraf .next",
     "deploy": "npm run build && git add -f docs && git commit -m \"Deploy\" && git push",
-    "postbuild": "git checkout -- public/base",
+    "postbuild": "git checkout -- public/images",
     "prebuild": "npm run clean && git checkout -- docs && rimraf public/images && mv docs/images public/",
     "start": "next dev --turbopack"
   },
