--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/exogen/t2-maps#readme",
   "scripts": {
-    "build": "next build && touch docs/.nojekyll",
+    "build": "next build --turbopack && touch docs/.nojekyll",
     "clean": "rimraf .next",
     "deploy": "npm run build && git add -f docs && git commit -m \"Deploy\" && git push",
     "gallery": "tsx scripts/gallery.ts",
